# grok-build

./: Cargo.toml  README.md  flake.nix
crates/codegen/xai-grok-agent/: Cargo.toml
crates/codegen/xai-grok-agent/src/: config.rs  discovery.rs
crates/codegen/xai-grok-agent/src/plugins/: discovery.rs  hooks_adapter.rs  manifest.rs  mod.rs  registry.rs
crates/codegen/xai-grok-agent/src/prompt/: skills.rs
crates/codegen/xai-grok-config-types/src/: lib.rs  permission.rs  provider.rs
crates/codegen/xai-grok-config/src/: lib.rs  loader.rs
crates/codegen/xai-grok-config/src/managed_text/: tests.rs
crates/codegen/xai-grok-hooks/src/: config.rs  discovery.rs  dispatcher.rs  error.rs  event.rs  invoker.rs  lib.rs
crates/codegen/xai-grok-hooks/src/runner/: command.rs  http.rs  mod.rs  plugin.rs
crates/codegen/xai-grok-hooks/tests/: integration.rs
crates/codegen/xai-grok-pager/: Cargo.toml
crates/codegen/xai-grok-pager/benches/: edit_highlight.rs
crates/codegen/xai-grok-pager/src/actions/: defaults.rs  mod.rs
crates/codegen/xai-grok-plugin-host/: Cargo.toml
crates/codegen/xai-grok-plugin-host/src/: capabilities.rs  lib.rs  orchestration.rs  rpc.rs  runtime.rs  sidecar.rs  supervisor.rs
crates/codegen/xai-grok-plugin-host/tests/: dto_drift.rs  supervisor.rs
crates/codegen/xai-grok-plugin-protocol/: .gitignore  Cargo.toml
crates/codegen/xai-grok-plugin-protocol/src/: lib.rs
crates/codegen/xai-grok-sampler/src/: client.rs  config.rs  intercept.rs  lib.rs  retry.rs  shared_http.rs
crates/codegen/xai-grok-sampler/tests/: test_actor.rs
crates/codegen/xai-grok-sampling-types/src/: gemini.rs  lib.rs  types.rs
crates/codegen/xai-grok-shell/: Cargo.toml
crates/codegen/xai-grok-shell/src/: claude_import.rs
crates/codegen/xai-grok-shell/tests/: test_mcp_permission_persistence.rs  test_sampling_client.rs
crates/codegen/xai-grok-subagent-resolution/src/: hook.rs  lib.rs  overrides.rs  types.rs
crates/codegen/xai-grok-test-support/src/: mock_server.rs  sse.rs
crates/codegen/xai-grok-workspace/src/: handle.rs  workspace_ops.rs
crates/codegen/xai-hooks-plugins-types/src/: lib.rs
examples/plugins/demo-hooks/: README.md  index.ts  plugin.json
nix/: hm-module.nix  package.nix  shells.nix  toolchain.nix  treefmt.nix
sdk/plugin/: README.md  package.json  tsconfig.json
sdk/plugin/src/: context.ts  define.ts  index.ts  rpc.ts  stdio.ts
sdk/plugin/test/: context.test.ts  define.test.ts  smoke.node.ts  stdio.test.ts
sdk/plugin/test/helpers/: memory-stream.ts
(+97 files in other folders)
