[package]
license = "Apache-2.0"
edition.workspace = true
name = "xai-grok-plugin-protocol"
version = "0.1.0"
description = "Versioned wire-contract DTOs for the grok-build TS plugin sidecar protocol (JSON-RPC 2.0, ts-rs boundary)"

# ts-rs is a hard dependency (not feature-gated as in xai-grok-announcements):
# `cargo test -p xai-grok-plugin-protocol` must regenerate sdk/plugin/src/generated
# with no extra flags, so the derives and export tests are always compiled.
[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
ts-rs = { workspace = true }

[lints]
workspace = true
